# 3d_engine_c

./: .gitignore  CMakeLists.txt  README.md  main.c
_codeql_build_dir/: 3d_game  CMakeCache.txt  Makefile  cmake_install.cmake
engine/core/: engine.c  engine.h  types.h
engine/input/: input.c  input.h
engine/math/: mat4.h  vec2.h  vec3.h
engine/renderer/: camera.c  camera.h  mesh.c  mesh.h  shader.c  shader.h
engine/resource/: obj_loader.c  obj_loader.h  terrain.c  terrain.h
game/: enemy.c  enemy.h  game.c  game.h  player.c  player.h
